remove requiring of cardId in getting all cards
